# mcm-label

./: README.md  pyproject.toml
src/mcm_label/: cli.py  default_style.css  default_template.html  mcm_label.py
